<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#27193F"
            android:contentDescription="@string/tien_algunos_cambios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/fondo" />

        <TextView
            android:id="@+id/nombreapp2"
            android:layout_width="223dp"
            android:layout_height="50dp"
            android:height="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/educalarma"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103"
            tools:text="EDUCALARMA" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="290dp"
            android:layout_height="214dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreapp2"
            app:srcCompat="@drawable/hora" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="289dp"
            android:layout_height="257dp"
            android:contentDescription="@string/todes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.042"
            app:srcCompat="@drawable/fecha" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:contentDescription="@string/tien_de_todooo"
            android:onClick="abrirInformacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.695"
            app:srcCompat="@drawable/guardar" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>