<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="Regular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27193F"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="807dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/fondoapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fondo_de_la_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fondologo" />

    <ImageView
        android:id="@+id/botomadicion"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo"
        android:onClick="abrirConfiguracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondo"
        app:layout_constraintVertical_bias="0.862"
        app:srcCompat="@drawable/adicion"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/nombreapp"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:height="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/educalarma"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/botomadicion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondoapp"
        app:layout_constraintVertical_bias="0.129"
        tools:text="EDUCALARMA" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/no_tienes_alarmas_creadas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/botomadicion"
        app:layout_constraintEnd_toEndOf="@+id/fondoapp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/fondoapp"
        app:layout_constraintTop_toBottomOf="@+id/nombreapp"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/suge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/crea_una"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/botomadicion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

</android.support.constraint.ConstraintLayout>