<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#27193F"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fondologo" />

        <ImageView
            android:id="@+id/botomadicion5"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:layout_marginBottom="116dp"
            android:contentDescription="@string/esta_hacia_arriba"
            android:onClick="abrirConfiguracion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fondo"
            app:layout_constraintVertical_bias="0.862"
            app:srcCompat="@drawable/adicion"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/logoo"
            android:layout_width="231dp"
            android:layout_height="49dp"
            android:layout_marginTop="68dp"
            android:height="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/educalarma"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/botomadicion5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019"
            tools:text="EDUCALARMA" />

        <TextView
            android:id="@+id/suge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/crea_mas_alarmas"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/botomadicion5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.929" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>